traefik/overlays/jed/patch-daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  template:
    spec:
      nodeSelector:
        jed.traefik.io/traefik-node: "true"
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
        - name: traefik
          ports:
            - name: web
              containerPort: 80
              hostPort: 8550
            - name: websecure
              containerPort: 443
              hostPort: 8551
            - name: ping
              containerPort: 8081
              hostPort: 9999
