traefik/overlays/jed/patch-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  strategy:
    type: Recreate
  template:
    spec:
      nodeName: rpi-master
      hostNetwork: true
      tolerations:
      - operator: Equal
        effect: NoSchedule
      containers:
        - name: traefik
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 443
